Update SystemHotkeyHelperMac to use post_task instead of FILE thread.

Bug: 740221
Change-Id: I59bcfd1a9a6a27b00d41ba9fee65f24b7dd0fc73
Reviewed-on: https://chromium-review.googlesource.com/564177
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Sky Malice <skym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485082}