content/browser/cocoa/system_hotkey_helper_mac.mm
@@ -10,6 +10,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/mac/foundation_util.h"
 #include "base/message_loop/message_loop.h"
 #include "base/metrics/histogram_macros.h"
+#include "base/task_scheduler/post_task.h"
+#include "base/task_scheduler/task_traits.h"
+#include "base/threading/thread_restrictions.h"
 #include "content/browser/cocoa/system_hotkey_map.h"
 #include "content/public/browser/browser_thread.h"
 
@@ -31,9 +34,8 @@ SystemHotkeyHelperMac* SystemHotkeyHelperMac::GetInstance() {
 }
 
 void SystemHotkeyHelperMac::DeferredLoadSystemHotkeys() {
-  BrowserThread::PostDelayedTask(
-      BrowserThread::FILE,
-      FROM_HERE,
+  base::PostDelayedTaskWithTraits(
+      FROM_HERE, {base::MayBlock()},
       base::Bind(&SystemHotkeyHelperMac::LoadSystemHotkeys,
                  base::Unretained(this)),
       base::TimeDelta::FromSeconds(kLoadHotkeysDelaySeconds));
@@ -46,7 +48,7 @@ SystemHotkeyHelperMac::~SystemHotkeyHelperMac() {
 }
 
 void SystemHotkeyHelperMac::LoadSystemHotkeys() {
-  DCHECK_CURRENTLY_ON(BrowserThread::FILE);
+  base::ThreadRestrictions::AssertIOAllowed();
 
   std::string library_path(base::mac::GetUserLibraryPath().value());
   NSString* expanded_file_path =
